--- a/src/components/App.css
+++ b/src/components/App.css
@@ -145,7 +145,6 @@ footer li::before {
 
 .lower_container {
   height: 25%;
-  margin: 5%;
   margin-top: auto;
   margin-left: 7%;
   display: flex;
@@ -154,9 +153,10 @@ footer li::before {
 footer {
   position: relative;
   width: 100%;
+  padding-bottom: 20px;
   height: 500px;
-  left: 0px;
-  bottom: 0;
+padding-top:20px;
+margin-top: 180px;
   background-color: rgba(7, 115, 215, 0.7);
 }
 
