--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,25 +1,26 @@
 .SearchBar{
-    background-color: #0773D7;
+    background-color: rgba(7, 115, 215, 0.73);
     border-radius: 1em;
     padding: 3vw;
-    max-width: 50%;
+    width: 745px;
+    height: 300px;
     justify-self: center;
     margin: auto;
-    margin-top: 1vh;
+    margin-top: 10px;
 }
 
 .searchForm{
     display: grid;
     grid-template-areas:    'from from swap to to'
-                            'fromerror fromerror . toerror toerror'
+                            'fromError fromError . toError toError'
                             'day month hours minutes submit'
                             'timeerror timeerror timeerror timeerror .';
-    grid-template-columns: 10vw 10vw 8vw 8vw auto;
-    grid-template-rows: 4vh auto 4vh auto;
-    row-gap: 1vh;
+    grid-template-columns: 156px 156px 121px 121px 191px;
+    grid-template-rows: 85.22px 63.95px 83.93px 63.95px;
+    row-gap: 5px;
 }
 
-.SearchBar h3{
+.SearchBar h1{
     margin:0;
     color: white;
 }
@@ -27,22 +28,22 @@
 .searchTitle{
     grid-area: title;
 }
+.textField{
+    font-size: larger !important;
+    font-weight: bold !important;
+    color: '#0773D7' !important;
+    background-color: white !important;
+}
 .from{
     grid-area: from;
-    font-size: larger;
-    color: #0773D7;
-    font-weight: bold
 }
 .swapbtn{
     grid-area: swap;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    justify-self: center;
+    margin-top: 10px;
 }
 .to{
     grid-area: to;
-    font-size: larger;
-    color: #0773D7;
-    font-weight: bold
 }
 .fromError{
     grid-area: fromerror;
@@ -75,7 +76,7 @@
 }
 .submitbtn{
     grid-area: submit;
-    margin-left: 1vw;
+    margin: 10px 0 10px 1vw ;
     border-radius: 0.8em;
     font-size: medium;
     border: 0px;
