--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,87 +1,97 @@
-.SearchBar{
-    background-color: rgba(7, 115, 215, 0.73);
-    border-radius: 1em;
-    padding: 3vw;
-    width: 745px;
-    height: 300px;
-    justify-self: center;
-    margin: auto;
-    margin-top: 10px;
+.SearchContainer {
+  background-image: url('../images/subway_07.jpg');
+  background-size: 500px;
+}
+.SearchBar {
+  background-color: rgba(7, 115, 215, 0.73);
+  border-radius: 1em;
+  padding: 3vw;
+  width: 745px;
+  justify-self: center;
+  margin: 10px auto auto;
 }
 
-.searchForm{
-    display: grid;
-    grid-template-areas:    'from from swap to to'
-                            'fromError fromError . toError toError'
-                            'day month hours minutes submit'
-                            'timeerror timeerror timeerror timeerror .';
-    grid-template-columns: 156px 156px 121px 121px 191px;
-    grid-template-rows: 85.22px 63.95px 83.93px 63.95px;
-    row-gap: 5px;
+.searchForm {
 }
 
-.SearchBar h1{
-    margin:0;
-    color: white;
+.swapIcon {
+  padding-left: 0px;
+}
+.swapIcon svg {
+  fill: #ffffff;
 }
 
-.searchTitle{
-    grid-area: title;
-}
-.textField{
-    font-size: larger !important;
-    font-weight: bold !important;
-    color: '#0773D7' !important;
-    background-color: white !important;
-}
-.from{
-    grid-area: from;
-}
-.swapbtn{
-    grid-area: swap;
-    justify-self: center;
-    margin-top: 10px;
-}
-.to{
-    grid-area: to;
-}
-.fromError{
-    grid-area: fromerror;
-}
-.toError{
-    grid-area: toerror;
-}
-.day{
-    grid-area: day;
-    color: #0773D7;
-    font-weight: bold
-}
-.month{
-    grid-area: month;
-    color: #0773D7;
-    font-weight: bold
-}
-.hour{
-    grid-area: hours;
-    color: #0773D7;
-    font-weight: bold
-}
-.minute{
-    grid-area: minutes;
-    color: #0773D7;
-    font-weight: bold
-}
-.timeError{
-    grid-area: timeerror;
-}
-.submitbtn{
-    grid-area: submit;
-    margin: 10px 0 10px 1vw ;
-    border-radius: 0.8em;
-    font-size: medium;
-    border: 0px;
+.SearchBar h1 {
+  margin: 0;
+  color: white;
 }
 
-.error{
-    color: red;
+.SearchBar h2 {
+  align-content: center;
+  color: white;
+  cursor: pointer;
+}
+.SearchBar h2:hover {
+  text-decoration: underline;
+}
+
+.searchTitle {
+}
+.textField {
+  font-size: larger !important;
+  font-weight: bold !important;
+  color: #0773d7 !important;
+  background-color: white !important;
+}
+.from {
+}
+.swapbtn {
+  justify-self: center;
+  margin-top: 10px;
+}
+.to {
+}
+.fromError {
+}
+.toError {
+}
+.day {
+  color: #0773d7;
+  font-weight: bold;
+}
+.month {
+  color: #0773d7;
+  font-weight: bold;
+}
+.hour {
+  color: #0773d7;
+  font-weight: bold;
+}
+.minute {
+  color: #0773d7;
+  font-weight: bold;
+}
+.timeError {
+}
+.submitbtn {
+  margin: 10px 0 10px 1vw;
+  border-radius: 0.8em;
+  font-size: medium;
+  border: 0px;
+  background-color: white !important;
+  padding-top: 31px;
+  padding-left: 6px;
+}
+
+.error {
+  color: red;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  border: 0 none;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: white;
 }
