add deploy of page and style small changes

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -155,7 +155,7 @@ footer {
   padding-top: 20px;
   padding-bottom: 20px;
   margin-top: 30px;
-  background-color: rgba(7, 115, 215, 0.7);
+  background-color: #0773d7;
 }
 
 .App-mobile {
