--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,6 +14,21 @@
   background: #0773d7;
 }
 
+.Margin-div {
+width: 100%;
+height: 45px;
+}
+
+.Summary_in_Chechkout
+{ border: 1px solid #002664;
+  padding: 10px;
+  line-height: 29px;
+  position: fixed;
+}
+.FavoriteRoadButton{ 
+  border: 1px solid #002664;
+  background-color: #ffffff;
+}
 .SignButton {
   color: #ffffff;
   background: #002664;
