--- a/src/components/App.css
+++ b/src/components/App.css
@@ -256,6 +256,7 @@ footer .icons {
 .ContentOfSummary {
   color: #002664;
   padding-right: 2%;
+  margin-top: 10px;
 }
 .ContentOfSummary:first-child {
   margin-bottom: 2%;
