--- a/src/components/App.css
+++ b/src/components/App.css
@@ -44,9 +44,19 @@ position: absolute;
 background-color: #0773d7;
 }
 .Menu-bar ul li:hover .Sub-menu-1 ul{
-display: block;
-margin: 10px;
-}
+  display: block;
+  margin: 10px;
+  }
+.Menu-bar ul li:focus-within .Sub-menu-1{
+  display: block;
+  position: absolute;
+  background-color: #0773d7;
+  }
+.Menu-bar ul li:focus-within .Sub-menu-1 ul{
+  display: block;
+  margin: 10px;
+  }
+
 .Sub-menu-1
 {
  display: none;
@@ -59,13 +69,21 @@ margin: 10px;
   align-self: flex-start;
   padding-right: 1%;}
 .Sub-menu-1 li{
-  width: inherit;
+
   text-align: left;
-  line-height: 120%;
+
 }
 .Sub-menu-1 li::before a{
   display: inline-block;
   }
+.menu-list{
+  padding: 0px;
+  padding-top: 0px;
+  font-size: 24px;
+  }
+
+
+
 
 .Margin-div {
   width: 100%;
@@ -189,7 +207,7 @@ footer li {
   color: #ffffff;
 }
 
-footer li::before {
+.footer li::before {
   content: '\1F892';
   width: 20px;
   height: 20px;
