--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,6 +11,7 @@
   text-align: center;
   background: #0773d7;
 }
+
 .HeaderMainPage {
   display: flex;
   height: 55px;
@@ -19,82 +20,88 @@
   text-align: center;
   background: #0773d7;
 }
-.MenuBar{
-width: 120%;
+
+.MenuBar {
+  width: 120%;
 }
-.MenuBar ul{
-display: inline-flex;
-list-style:none;
-padding: 0px;
-margin: 0px;
-color: #ffffff;
+
+.MenuBar ul {
+  display: inline-flex;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  color: #ffffff;
 }
-.MenuBar ul li{
-  padding: 15px;
-  padding-top: 10px;
+
+.MenuBar ul li {
+  padding: 10px 15px 15px;
   font-size: 24px;
-  }
-.MenuBar ul li:hover{
-background-color: #002664;
-border-radius: 2px;
-  }
-.MenuBar ul li:focus-within .SubMenu-1{
+}
+
+.MenuBar ul li:hover {
+  background-color: #002664;
+  border-radius: 2px;
+}
+
+.MenuBar ul li:focus-within .SubMenu-1 {
   display: block;
   position: absolute;
   background-color: #0773d7;
-  }
-.MenuButton
-  {
-    background-color: #0773d7;
-    }
-.MenuBar ul li:focus-within .SubMenu-1 ul{
+}
+
+.MenuButton {
+  background-color: #0773d7;
+}
+
+.MenuBar ul li:focus-within .SubMenu-1 ul {
   display: block;
   padding: 20px;
-  }
-
-.SubMenu-1
-{
- display: none;
- z-index: 1;
- top: 70px;
-
 }
+
+.SubMenu-1 {
+  display: none;
+  z-index: 1;
+  top: 70px;
+}
+
 .SubMenu-1 li::before a {
   content: '\1F892';
   align-self: flex-start;
   padding-right: 1%;
-  display: inline-block;}
-  .SubMenu-1 li{
-    text-align: left;
-    border:#002664;
-  }
-  
-.MenuList{
+  display: inline-block;
+}
+
+.SubMenu-1 li {
+  text-align: left;
+  border: #002664;
+}
+
+.MenuList {
   padding: 0px;
-  padding-top: 0px;
   font-size: 24px;
-  }
-.MenuList li a{
-  border:#002664;
-  }
+}
 
-
+.MenuList li a {
+  border: #002664;
+}
 
 .Margin-div {
   width: 100%;
   height: 45px;
 }
 
-.SummaryInChechkout {
+.SummaryInCheckout {
   border: 1px solid #002664;
   padding: 10px;
   line-height: 29px;
   position: fixed;
 }
+
 .FavoriteRoadButton {
   border: 1px solid #002664;
   background-color: #ffffff;
 }
+
 .SignButton {
   color: #ffffff;
   background: #002664;
@@ -185,16 +192,15 @@ footer h4 {
   color: #ffffff;
   display: flex;
   font-size: 20px;
-  line-height: 29px
+  line-height: 29px;
 }
-
 
 a {
   text-decoration: none;
   color: #ffffff;
 }
 
-footer  li{
+footer li {
   list-style: none;
   font-style: normal;
   font-weight: 500;
@@ -217,19 +223,16 @@ footer  li{
   margin-left: 5%;
   margin-right: 2%;
 }
-.footer-RSS li{
+
+.footer-RSS li {
   float: left;
   margin-left: 200%;
   margin-right: 2%;
-  
 }
-
 
 .upper_container {
   height: 25%;
-  margin: 5%;
-  margin-top: 2%;
-  margin-bottom: 3%;
+  margin: 2% 5% 3%;
   display: flex;
   align-items: center;
 }
@@ -240,12 +243,12 @@ footer  li{
   margin-left: 7%;
   display: flex;
 }
+
 .Authors_info {
   height: 25%;
   margin-top: auto;
   margin-left: 7%;
   color: #ffffff;
-  
 }
 
 footer {
@@ -280,7 +283,8 @@ footer .icons {
   margin-left: auto;
   background-color: white;
 }
-.Last_line{
+
+.Last_line {
   width: 86%;
   height: 1px;
   border: 0 none;
@@ -288,29 +292,31 @@ footer .icons {
   margin-left: auto;
   background-color: white;
 }
-.Up_to_start{
+
+.Up_to_start {
   float: right !important;
   margin-right: 8%;
-  z-index:9;
+  z-index: 9;
 }
-.Up_to_start:hover
-{
-text-decoration: underline;
+
+.Up_to_start:hover {
+  text-decoration: underline;
 }
 
 .Socialmedia {
   list-style: none;
   color: #ffffff;
 }
-.Socialmedia li a{
-font-size: 18px;
-margin-left: 5%;
+
+.Socialmedia li a {
+  font-size: 18px;
+  margin-left: 5%;
 }
 
-.phone a{
+.phone a {
   font-size: 18px;
   margin-left: 1px;
-  }
+}
 
 .img-logo {
   width: 267px;
@@ -329,6 +335,7 @@ margin-left: 5%;
 .AlignSecondButton button:nth-child(2) {
   margin-left: auto;
 }
+
 .AlignSecondButton {
   display: flex;
   margin-top: 30px;
@@ -344,19 +351,18 @@ margin-left: 5%;
   border: 1px solid #002664;
 }
 
-.ContentConainer {
+.ContentContainer {
   border: 1px solid #002664;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin: 5%;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 2%;
 }
-.ContentConainer:last-child {
+
+.ContentContainer:last-child {
   background-color: rgb(232, 232, 232);
 }
+
 .AdjustData {
   border: 1px solid #002664;
 }
@@ -364,14 +370,17 @@ margin-left: 5%;
 .ButtonToEdit {
   float: right;
 }
+
 .ContentOfSummary {
   color: #002664;
   padding-right: 2%;
   margin-top: 10px;
 }
+
 .ContentOfSummary:first-child {
   margin-bottom: 2%;
 }
+
 .BackButton {
   margin-top: 5%;
 }
