--- a/src/components/App.css
+++ b/src/components/App.css
@@ -264,3 +264,14 @@ footer .icons {
 .BackButton {
   margin-top: 5%;
 }
+
+.InformationCardContainer {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding-top: 40px;
+}
+
+.InformationCardContainer .css-1xkonbu-MuiPaper-root-MuiCard-root {
+  color: #002664;
+}
