--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,6 +23,9 @@
 
 .MenuBar {
   width: 120%;
+  display: flex;
+  justify-items: center;
+  justify-content: center;
 }
 
 .MenuBar ul {
@@ -35,7 +38,7 @@
 
 .MenuBar ul li {
   padding: 10px 15px 15px;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .MenuBar ul li:hover {
@@ -78,7 +81,7 @@
 
 .MenuList {
   padding: 0px;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .MenuList li a {
