--- a/src/components/App.css
+++ b/src/components/App.css
@@ -31,6 +31,11 @@
   padding: 0px;
   margin: 0px;
   color: #ffffff;
+  cursor: pointer;
+}
+.Pointer{
+  font-size: 16px;
+  align-self: center;
 }
 
 .MenuBar ul li {
