--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -8,7 +8,7 @@
 }
 
 .SearchBar {
-  background-color: rgba(7, 115, 215, 0.94);
+  background: #0773d7;
   border-radius: 1em;
   padding: 3vw;
   width: 745px;
